@@ -1,7 +1,7 @@
 {
     "name": "OVN_Southbound",
-    "version": "20.27.0",
-    "cksum": "4078371916 30328",
+    "version": "20.27.1",
+    "cksum": "1439763681 30400",
     "tables": {
         "SB_Global": {
             "columns": {
@@ -151,8 +151,9 @@
                                                       "to-lport"]]}}},
                 "sink":{"type": "string"},
                 "type": {"type": {"key": {"type": "string",
-                                            "enum": ["set",
-                                                     ["gre", "erspan"]]}}},
+                                          "enum": ["set", ["gre",
+                                                           "erspan",
+                                                           "local"]]}}},
                 "index": {"type": "integer"},
                 "external_ids": {
                     "type": {"key": "string", "value": "string",
