@@ -14,6 +14,7 @@ Post v23.03.0
     existing behaviour of flooding these arp requests to all attached Ports.
   - Always allow IPv6 Router Discovery, Neighbor Discovery, and Multicast
     Listener Discovery protocols, regardless of ACLs defined.
+  - Support using local OVS port as port-mirroring target.
 
 OVN v23.03.0 - 03 Mar 2023
 --------------------------
